<resources>
    <string name="app_name">WeatherApp</string>
    <string name="title_activity_zip_codes">ZipCodes</string>
    <string name="action_zip_codes">Add ZipCode</string>
    <string name="zipcode_example">99880</string>
    <string name="zipcode">Zip code:</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="num_pages">Number of Pages</string>
    <string name="default_page_num">1</string>
    <string name="de_pages">of</string>
    <string name="total_page_number">3</string>
    <string name="empty_data">No data available</string>
    <string name="city">City:</string>
</resources>
