<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.giovas.weatherapp.MainActivity">

    <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="@dimen/appbar_elevation"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/normal_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_pages"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:id="@+id/textView2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_page_num"
                android:id="@+id/numPages"
                android:layout_marginRight="@dimen/normal_padding"
                android:layout_marginEnd="@dimen/normal_padding"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_toLeftOf="@+id/textView4"
                android:layout_toStartOf="@+id/textView4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/de_pages"
                android:id="@+id/textView4"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/totalPages"
                android:layout_toStartOf="@+id/totalPages" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/total_page_number"
                android:id="@+id/totalPages"
                android:layout_marginLeft="@dimen/normal_padding"
                android:layout_marginStart="@dimen/normal_padding"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/nav_back"
                android:layout_width="wrap_content"
                android:background="@drawable/arrow_left"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="0"/>

            <android.support.v4.view.ViewPager
                android:id="@+id/pagerLocations"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </android.support.v4.view.ViewPager>


            <ImageView
                android:id="@+id/nav_forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@drawable/arrow_right"
                android:layout_gravity="center"/>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
